hpg-code/logs/.ipynb_checkpoints/preprocess_emotion_attack_43364605-checkpoint.log
  File "/blue/ruogu.fang/akshayashok/emotion_adversarial_attack/code/process_data.py", line 22
    if not os.path.exists(os.path.join(processed_dir, 'val')):
                                                             ^
SyntaxError: invalid syntax
Tue Sep  3 19:46:27 EDT 2024
c0706a-s2.ufhpc
/blue/ruogu.fang/akshayashok/emotion_adversarial_attack/code
